tests/expects/char_failure/test_char_empty.expect
error: Empty character literal
  --> char_failure/test_char_empty.truk:2:16
  |
1 | fn main() : i32 {
2 |   var c: i8 = '';
  |                ^
3 |   return 0;
  |

Compilation failed with 1 error(s)
